objects/CSQ_Profile__c.object
<CustomObject>
    <fields>
        <fullName>CSQ_AllProjectsCoached__c</fullName>
        <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK(&apos;/one/one.app#/sObject/&apos;&amp; $Label.CLJUL2018I2P21 &amp; &apos;/view?fv0=&apos; &amp;  CSQ_bFOUser__r.FirstName &amp; &apos; &apos; &amp; CSQ_bFOUser__r.LastName , &quot;Report&quot;),
HYPERLINK(&apos;/&apos; &amp; $Label.CLQ316I2P19 &amp; &apos;?pv0=&apos; &amp;  CSQ_bFOUser__r.FirstName &amp; &apos; &apos; &amp; CSQ_bFOUser__r.LastName , &quot;Report&quot;))</formula>
        <label>All Projects Coached</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSQ_AllProjectsManaged__c</fullName>
        <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK(&apos;/one/one.app#/sObject/&apos; &amp; $Label.CLJUL2018I2P22 &amp; &apos;/view?fv0=&apos; &amp; CSQ_bFOUser__r.FirstName &amp; &apos; &apos; &amp; CSQ_bFOUser__r.LastName , &quot;Report&quot;), 
HYPERLINK($Label.CLQ216I2P16 &amp; &apos;/&apos; &amp; $Label.CLQ316I2P20 &amp; &apos;?pv0=&apos; &amp; CSQ_bFOUser__r.FirstName &amp; &apos; &apos; &amp; CSQ_bFOUser__r.LastName , &quot;Report&quot;))</formula>
        <label>All Projects Managed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSQ_CSQProfileCertificationLogo__c</fullName>
        <formula>IF( CSQ_NumberOfMasterBlackBelts__c &gt; 0 || CSQ_NumberOfCertifiedMasterBlackBelts__c &gt; 0 , image(&quot;/resource/SR_Q316_CT_MasterBlackBelt&quot;,&quot;CertificationType&quot;, 20,31), IF((CSQ_NumberOfMasterBlackBelts__c = 0 &amp;&amp; CSQ_NumberOfCertifiedMasterBlackBelts__c = 0) &amp;&amp; (CSQ_NumberOfBlackBelts__c &gt; 0 || CSQ_NumberOfCertifiedBlackBelts__c &gt; 0), image(&quot;/resource/SR_Q316_CT_BlackBelt&quot;,&quot;CertificationType&quot;, 20,31), IF( (CSQ_NumberOfMasterBlackBelts__c = 0 &amp;&amp; CSQ_NumberOfCertifiedMasterBlackBelts__c = 0) &amp;&amp; (CSQ_NumberOfBlackBelts__c = 0 &amp;&amp; CSQ_NumberOfCertifiedBlackBelts__c = 0) &amp;&amp; CSQ_NumberOfCertifiedGreenBelts__c &gt; 0 , image(&quot;/resource/SR_Q316_CT_GreenBelt&quot;,&quot;CertificationType&quot;, 20,31), IF( (CSQ_NumberOfMasterBlackBelts__c = 0 &amp;&amp; CSQ_NumberOfCertifiedMasterBlackBelts__c = 0) &amp;&amp; (CSQ_NumberOfBlackBelts__c = 0 &amp;&amp; CSQ_NumberOfCertifiedBlackBelts__c = 0) &amp;&amp; CSQ_NumberOfCertifiedGreenBelts__c = 0 &amp;&amp; CSQ_NumberOfGreenBelts__c &gt; 0, image(&quot;/resource/SR_Q316_CT_YellowBelt&quot;,&quot;CertificationType&quot;, 20,31),&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS&amp;Q Profile Certification Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSQ_DefaultOrganization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Organization</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>To be deactivated</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>CSQ Profiles</relationshipLabel>
        <relationshipName>CSQ_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSQ_NonbFOUserEmail__c</fullName>
        <label>Non bFO User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberOfBlackBelts__c</fullName>
        <description>Non certified Black Belts</description>
        <label>Number Of Trained Black Belts</label>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>contains</operation>
            <value>&apos;Lean 6 Sigma Black Belt&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>notContain</operation>
            <value>&apos;Master&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.CSQ_Certificationstatus__c</field>
            <operation>notEqual</operation>
            <value>Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>CSQ_CertificationStatus__c.CSQ_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberOfCertifiedBlackBelts__c</fullName>
        <label>Number Of Certified Black Belts</label>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>contains</operation>
            <value>&apos;Lean 6 Sigma Black Belt&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>notContain</operation>
            <value>&apos;Master&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.CSQ_Certificationstatus__c</field>
            <operation>equals</operation>
            <value>Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>CSQ_CertificationStatus__c.CSQ_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberOfCertifiedGreenBelts__c</fullName>
        <label>Number Of Certified Green Belts</label>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>contains</operation>
            <value>&apos;Lean 6 Sigma Green Belt&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.CSQ_Certificationstatus__c</field>
            <operation>equals</operation>
            <value>Certified,Certification Expired</value>
        </summaryFilterItems>
        <summaryForeignKey>CSQ_CertificationStatus__c.CSQ_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberOfCertifiedMasterBlackBelts__c</fullName>
        <label>Number Of Certified Master Black Belts</label>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>contains</operation>
            <value>&apos;Lean 6 Sigma Master Black Belt&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.CSQ_Certificationstatus__c</field>
            <operation>equals</operation>
            <value>Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>CSQ_CertificationStatus__c.CSQ_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberOfCertifiedYellowBelts__c</fullName>
        <label>Number Of Certified Yellow Belts</label>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>contains</operation>
            <value>&apos;Lean 6 Sigma Yellow Belt&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.CSQ_Certificationstatus__c</field>
            <operation>equals</operation>
            <value>Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>CSQ_CertificationStatus__c.CSQ_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberOfGreenBelts__c</fullName>
        <description>Non certified Green Belts</description>
        <label>Number Of Trained Green Belts</label>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>contains</operation>
            <value>&apos;Lean 6 Sigma Green Belt&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.CSQ_Certificationstatus__c</field>
            <operation>notEqual</operation>
            <value>Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>CSQ_CertificationStatus__c.CSQ_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberOfMasterBlackBelts__c</fullName>
        <description>Not certified Master black belt</description>
        <label>Number Of Trained Master Black Belts</label>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>contains</operation>
            <value>&apos;Lean 6 Sigma Master Black Belt&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.CSQ_Certificationstatus__c</field>
            <operation>notEqual</operation>
            <value>Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>CSQ_CertificationStatus__c.CSQ_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberOfYellowBelts__c</fullName>
        <description>Non certified Yellow Belts</description>
        <label>Number Of Trained Yellow Belts</label>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.Name</field>
            <operation>contains</operation>
            <value>&apos;Lean 6 Sigma Yellow Belt&apos;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.CSQ_Certificationstatus__c</field>
            <operation>notEqual</operation>
            <value>Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>CSQ_CertificationStatus__c.CSQ_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberofCertifications__c</fullName>
        <label>Number of Certifications</label>
        <summaryFilterItems>
            <field>CSQ_CertificationStatus__c.CSQ_Certificationstatus__c</field>
            <operation>equals</operation>
            <value>Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>CSQ_CertificationStatus__c.CSQ_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSQ_SESA__c</fullName>
        <formula>CSQ_bFOUser__r.SESAExternalID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SESA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSQ_TECH_Unique__c</fullName>
        <label>TECH_Unique</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSQ_bFOUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>bFO User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IambFOUser__c</fullName>
        <formula>IF( CSQ_bFOUser__c = $User.Id , TRUE , FALSE)</formula>
        <label>IambFOUser</label>
        <type>Checkbox</type>
    </fields>
    <label>CSQ Profile</label>
    <listViews>
        <fullName>All_CSQ_Profiles_Without_bFO_User</fullName>
        <columns>NAME</columns>
        <columns>CSQ_bFOUser__c</columns>
        <columns>CSQ_NonbFOUserEmail__c</columns>
        <columns>CSQ_DefaultOrganization__c</columns>
        <columns>CSQ_CSQProfileCertificationLogo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSQ_DefaultOrganization__c</field>
            <operation>contains</operation>
            <value>RoW Operations - Middle East &amp; Africa</value>
        </filters>
        <label>All CSQ Profiles Without bFO User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Seren</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSQ_DefaultOrganization__c</field>
            <operation>equals</operation>
            <value>RoW Operations - Middle East &amp; Africa</value>
        </filters>
        <label>Seren</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSQ Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Q316_CP_EmailOrUserMandatory</fullName>
        <active>true</active>
        <description>Q3 2016 Release : Please fill in bFO User or Email</description>
        <errorConditionFormula>AND( NOT( $User.BypassVR__c ) , ISBLANK( CSQ_bFOUser__c ) , ISBLANK( CSQ_NonbFOUserEmail__c ))</errorConditionFormula>
        <errorMessage>Please fill in bFO User or Email</errorMessage>
    </validationRules>
</CustomObject>